--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -81,3 +81,10 @@ spring.thymeleaf.encoding=UTF-8
 spring.thymeleaf.cache=false
 
 logging.config=classpath:logback-spring.xml
+
+### 文章详情页目录 ###
+article.catalog=/usr/local/webserver/nginx/templates/
+article.img=/usr/local/webserver/nginx/img/
+upyun.bucketName=
+upyun.userName=
+upyun.password=
