fix 跨域 fix 新增对象的ID fix 审计

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,8 @@ server:
       force: true
   port: 8080
 spring:
+  resources:
+    static-locations: classpath:/static
   datasource:
     driver-class-name:  net.sf.log4jdbc.DriverSpy
     password:
