文章增加权限

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -78,3 +78,6 @@ aj:
   slip-offset: 5
   interference-options: 2
   aes-status: true
+
+baidu:
+  siteUrl: http://data.zz.baidu.com/urls?site=https://smallyoung.cn/article/{}.html&token=123
