百度收录API提交

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -82,4 +82,4 @@ aj:
     aes-status: true
 
 baidu:
-  siteUrl: http://data.zz.baidu.com/urls?site=https://smallyoung.cn/article/{}.html&token=123
+  siteUrl: http://data.zz.baidu.com/urls?site=https://www.smallyoung.cn&token=123456
