--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -70,6 +70,11 @@ default:
 article:
   catalog: /usr/local/nginx/templates/
   img: /usr/local/nginx/img/article
+
+website:
+  catalog: /usr/local/nginx/html/
+  sitemap: /usr/local/nginx/html/sitemap.txt
+
 aj:
   captcha:
     cache-type: redis
